@@ -1,4 +1,5 @@
 0.3.2
+Adjusing tabs size now doesn't reguire restart.
 Added notebook tab size adjustment to prefs.
 Added extra debian instructions for gtk 3 in INSTALL.
 Squeezed tabs in gtk3.
